
package idiot.game.elements;

public class CardStack extends CardContainer {

    public CardStack() {

        // max 2 cards in each stack
        super(2);
    }
}
